# libjam

./: .clang-format  .cmake-format.py  .cmake-format.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt
cmake/: compdb.cmake  force_colored_output.cmake  install_cmake_format.cmake  install_compdb.cmake  install_pip_package.cmake  install_pre_commit.cmake  jack2.cmake  pjproject.cmake
cmake/toolchain/: clang-linux-x86_64.cmake
include/: jam.h
scripts/: build.py  clang_format.py  clang_tidy.py  cmake_format.py  cmake_lint.py  install_virtualenv.sh  setup_virtualenv.sh  update-alternatives-clang.py  update_alternatives_clang.py
src/: jam.cpp
tests/: CMakeLists.txt  jam.cpp  jam_tests.cpp
